--- a/CRUD.html
+++ b/CRUD.html
@@ -14,11 +14,31 @@
       <div class="input">
         <input placeholder="title" type="text" id="title" />
         <div class="price">
-          <input placeholder="price" type="number" id="price" />
-          <input placeholder="tax" type="number" id="tax" />
-          <input placeholder="ads" type="number" id="ads" />
-          <input placeholder="discount" type="number" id="discount" />
-          <small id="total">:3211</small>
+          <input
+            onkeyup="getTotal()"
+            placeholder="price"
+            type="number"
+            id="price"
+          />
+          <input
+            onkeyup="getTotal()"
+            placeholder="tax"
+            type="number"
+            id="tax"
+          />
+          <input
+            onkeyup="getTotal()"
+            placeholder="ads"
+            type="number"
+            id="ads"
+          />
+          <input
+            onkeyup="getTotal()"
+            placeholder="discount"
+            type="number"
+            id="discount"
+          />
+          <small id="total"></small>
         </div>
         <input placeholder="count" type="number" id="count" />
         <input placeholder="category" type="text" id="category" />
@@ -27,12 +47,22 @@
 
       <div class="output">
         <div class="searchBlock">
-          <input type="text" id="search" placeholder="search" />
+          <input
+            onkeyup="searchData(this.value)"
+            type="text"
+            id="search"
+            placeholder="search"
+          />
           <div class="btnsearch">
-            <button id="searchtitle">search by title</button>
-            <button id="searchcategory">search by category</button>
+            <button onclick="getsearchMood(this.id)" id="searchtitle">
+              search by title
+            </button>
+            <button onclick="getsearchMood(this.id)" id="searchcategory">
+              search by category
+            </button>
           </div>
         </div>
+        <div id="deletAall"></div>
         <table>
           <tr>
             <th>id</th>
@@ -47,20 +77,7 @@
             <th>delete</th>
           </tr>
 
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>samsung</td>
-              <td>100</td>
-              <td>10</td>
-              <td>15</td>
-              <td>18</td>
-              <td>112</td>
-              <td>phone</td>
-              <td><button id="update">update</button></td>
-              <td><button id="delete">delete</button></td>
-            </tr>
-          </tbody>
+          <tbody id="tbody"></tbody>
         </table>
       </div>
     </div>
