--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="crud">
       <div class="head">
-        <h2>Bleugerana_crud</h2>
+        <h2>Bleugerana_cruds</h2>
         <p>project management system</p>
       </div>
       <div class="input">
